--- a/styling/style.css
+++ b/styling/style.css
@@ -2,6 +2,8 @@ html{
     margin: 0;
     padding: 0;
     border: 0;
+    background: #181A1B;
+    font-family: Rockwell, Arial, Calibri;
 }
 
 #showcase{
