--- a/styling/style.css
+++ b/styling/style.css
@@ -2,7 +2,7 @@ html{
     margin: 0;
     padding: 0;
     border: 0;
-    background: #181A1B;
+    background-color: #181A1B;
     font-family: Rockwell, Arial, Calibri;
 }
 
