--- a/styling/style.css
+++ b/styling/style.css
@@ -1,8 +1,3 @@
-@font-face {
-	font-family: "Rockwell";
-	src: url("/fonts/Rockwell.woff2") format("woff2");
-}
-
 html,
 body {
 	margin: 0;
@@ -10,6 +5,12 @@ body {
 	border: 0;
 	background-color: #181a1b;
 	font-family: "Rockwell", -apple-system, Arial, sans-serif;
+}
+
+#nav{
+    text-align: center;
+	padding-top: 2vh;
+
 }
 
 #showcase {
