--- a/styling/style.css
+++ b/styling/style.css
@@ -7,9 +7,12 @@ body {
 	font-family: "Rockwell", -apple-system, Arial, sans-serif;
 }
 
-#nav *{
+#nav{
     text-align: center;
 	padding-top: 2vh;
+}
+
+#nav *{
     color: white;
 }
 
