--- a/styling/style.css
+++ b/styling/style.css
@@ -1,4 +1,4 @@
-.center{
+.center {
 	text-align: center;
 }
 
@@ -28,7 +28,7 @@ body {
 #showcase #clancastle,
 #showcase #spelltower,
 #showcase #xbow {
-	height: 8vw;
+	height: 7vw;
 	width: auto;
 }
 
@@ -47,7 +47,7 @@ body {
 
 #title,
 #baseNum,
-#baseLink{
+#baseLink {
 	color: #ff006e;
 }
 
@@ -77,7 +77,7 @@ body {
 }
 
 #showcase #github {
-	height: 10vh;
+	height: 6vh;
 	width: auto;
 	position: fixed;
 	left: 0;
@@ -85,6 +85,43 @@ body {
 	padding-bottom: 0;
 }
 
-#baseLink{
+#baseLink {
 	text-decoration: none;
+}
+
+#ratioWarning {
+	display: none;
+	position: fixed;
+	color: red;
+	font-weight: bold;
+	font-size: 100%;
+	text-shadow: black 2px 2px;
+	top: 0;
+	left: 50%; /* shift left edge to midpoint */
+	transform: translateX(-50%);
+}
+
+/* Show when height is 600px or less */
+@media screen and (max-height: 630px) {
+	#ratioWarning {
+		display: block;
+	}
+}
+
+/* Hide when height is 601px or more */
+@media screen and (min-height: 631px) {
+	#ratioWarning {
+		display: none;
+	}
+}
+
+@media (max-width: 532px) {
+	#showcase #github {
+		height: 6vh;
+		width: auto;
+		position: fixed;
+		left: 0;
+		top: 6vh;
+		padding-bottom: 0;
+	}
 }
