--- a/styling/style.css
+++ b/styling/style.css
@@ -27,7 +27,8 @@ body {
 
 #showcase #clancastle,
 #showcase #spelltower,
-#showcase #xbow {
+#showcase #xbow,
+#showcase #infernotower {
 	height: 7vw;
 	width: auto;
 }
