--- a/styling/style.css
+++ b/styling/style.css
@@ -51,10 +51,10 @@ body * {
 
 #nav {
 	position: fixed;
-	z-index: 1;
 	left: 50vw;
-	top: 12vh;
 	transform: translate(-50%);
+	top: 12vh;
+	text-shadow: black 0px 4px 0px;
 	width: max-content;
 }
 
