more positioning shit

--- a/styling/style.css
+++ b/styling/style.css
@@ -104,10 +104,10 @@ body * {
 }
 
 #baseLinkHeader {
+	font-size: 200%;
 	position: fixed;
-	right: 4vw;
-	top: 75.7vh;
-	font-size: 130%;
+	bottom: 16.1vh;
+	right: 3.6vw;
 }
 
 /*──────────────────────────────────*/
@@ -262,7 +262,8 @@ body * {
 	position: fixed;
 	border-radius: 25px;
 	z-index: 1;
-	width: max-content;
+	width: 41.4vw;
+	height: 17vh;
 	bottom: 1vh;
 }
 
@@ -287,7 +288,7 @@ body * {
 
 #cc-section {
 	bottom: 1vh;
-	right: 28.1vw;
+	left: 47.4vw;
 	width: max-content;
 	height: 17vh;
 	justify-content: left;
