--- a/styling/style.css
+++ b/styling/style.css
@@ -117,6 +117,20 @@ body * {
 	right: 29vw;
 }
 
+#baseStatsModal {
+	position: fixed;
+	left: 50vw;
+	top: 20vh;
+	width: auto;
+	transform: translate(-50%);
+	display: none;
+	background: url(../images/spelltower.png) no-repeat center;
+	border-radius: 25px;
+	padding-bottom: 11vw;
+	padding-left: 10vw;
+	padding-right: 10vw;
+}
+
 /*──────────────────────────────────*/
 /* 3. Showcase & images             */
 /*──────────────────────────────────*/
